--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1963,11 +1963,27 @@ section,
 
 /* =============================== */
 .counter-section i { display:block; margin:0 0 10px}
-.counter-section span.counter { font-size:40px; color: var(--accent-color); line-height:60px; display:block; letter-spacing: 2px}
+.counter-section span.counter {
+    font-size:40px;
+    color: var(--accent-color);
+    line-height:60px;
+    display:block;
+    letter-spacing: 2px;
+    text-align: center;
+    text-shadow: 5px 5px 0px currentColor;
+    -webkit-text-stroke-color: #484848;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 4px;
+}
 .counter-title{ font-size:12px; text-transform: uppercase}
 .counter-icon {top:25px; position:relative}
 .counter-style2 .counter-title {letter-spacing: 0.55px; float: right;}
-.counter-style2 span.counter {letter-spacing: 0.55px; float: right; margin-right: 10px;}
+.counter-style2 span.counter {
+    letter-spacing: 0.55px;
+    float: right;
+    margin-right: 10px;
+
+}
 .counter-style2 i {float: right; line-height: 26px; margin: 0 10px 0 0}
 .counter-subheadline span {float: right;}
 
@@ -1980,4 +1996,25 @@ section,
     margin-bottom: 15px !important;
 }
 
+
+.spikes {
+    position: relative;
+  }
+
+  .spikes::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    left: -0%;
+    top: 100%;
+    z-index: 10;
+    display: block;
+    height: 50px;
+    background-size: 50px 100%;
+    background-image: linear-gradient(135deg, #fffbf1 25%, transparent 25%),
+      linear-gradient(225deg, #fffbf1 25%, transparent 25%);
+    background-position: 0 0;
+  }
+
+/* ===========about=========== */
 
