adding form for providers requestes

--- a/public/front/assets/css/main.css
+++ b/public/front/assets/css/main.css
@@ -2195,3 +2195,12 @@ section,
 
 /* ===========about=========== */
 
+.blog_img{
+width: 15rem;
+height: 10rem;
+}
+
+.blog_card{
+    width: 35rem;
+    height: 25rem;
+}
