creating models and crud operations for cities and districts , and link them with appointments table.

--- a/public/admin/css/main.css
+++ b/public/admin/css/main.css
@@ -1,3 +1,9 @@
 .center {
     text-align: center; /* Center aligns inline elements */
 }
+
+.center_table{
+    text-align: center !important;
+    margin: auto !important;
+    justify-content: center !important;
+    }
