--- a/public/front/assets/css/main.css
+++ b/public/front/assets/css/main.css
@@ -1192,7 +1192,7 @@ section,
     padding-right: 50px;
 }
 
-.portfolio .portfolio-item .portfolio-info .preview-link,
+/* .portfolio .portfolio-item .portfolio-info .preview-link,
 .portfolio .portfolio-item .portfolio-info .details-link {
     position: absolute;
     right: 50px;
@@ -1201,7 +1201,7 @@ section,
     color: color-mix(in srgb, var(--default-color), transparent 30%);
     transition: 0.3s;
     line-height: 0;
-}
+} */
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
@@ -2444,10 +2444,7 @@ span.counter_text {
         margin-bottom: 5px;
         padding: 10px;
     }
-    .offer_btn {
-        font-size: 12px !important;
-        max-width: 14rem;
-    }
+
 }
 
 /* cities section */
