--- a/public/admin/css/main.css
+++ b/public/admin/css/main.css
@@ -6,4 +6,22 @@
     text-align: center !important;
     margin: auto !important;
     justify-content: center !important;
-    }
+}
+
+
+
+.pagination-wrapper {
+    display: flex;
+    justify-content: center;
+    width: auto;
+    margin: 20px 0;
+    max-width: 40%;
+    flex-direction: column;
+    margin: auto;
+text-align: center;
+}
+
+.pagination-links {
+    margin: 20px;
+}
+
